--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "buefy": "^0.6.5",
     "bulma": "^0.7.0",
+    "dexie": "^2.0.2",
     "newsapi": "^2.2.2",
     "ngrok": "^3.0.1",
     "vue": "^2.5.2",
